Fix img alignment in mobile

--- a/styles/sass/mainArea.scss
+++ b/styles/sass/mainArea.scss
@@ -144,7 +144,12 @@ img.rounded-left-3 {
         }
 
         img {
-            width: 50%;
+            width: 60%;
+            height: 60%;
+        }
+
+        .lamp-image {
+            align-self: center;
         }
     }
     #gallery {
